# oliverpeitsalo.github.io

./: .gitignore  README.md  index.html  package-lock.json  package.json
assets/: index-6daHblWW.js  index-BSQZ2-DT.css  index-BTyGGkHp.js  index-BhRkdLAx.js  index-BuLSH-qa.js  index-CEI23UoE.js  index-CsYe22Yd.js  index-CvUuXvKd.js  index-DB7wKXPU.js  index-DDSVpHAf.css  index-DL7IoCgU.css  index-DUKD_RWR.css  index-DkOIevfF.js  index-DqtYSXlJ.js  index-FKXBA4R4.css  index-lgQwWgIb.css
backend/: Cargo.toml
backend/src/: main.rs
chat-microservice/: README.md  package-lock.json  package.json  tsconfig.json
chat-microservice/src/: server.ts
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/app/components/: Chat.tsx  FrontPage.tsx  FrontPageContainer.tsx  GameTimer.tsx  Leaderboard.tsx  PlayerList.tsx  TriviaRoom.tsx
leaderboard-service-wenrui (1)/leaderboard-service/: server.js
leaderboard-service/leaderboard-service/: README.md  package.json  server.js
